test/libyul/yulSyntaxTests/objects/object_hex_name.yul
object hex"11" {
  code {}
}
// ----
// ParserError 2314: (7-14='hex"11"'): Expected 'StringLiteral' but got 'HexStringLiteral'
